<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:defaultValue="e164.arpa"
        android:dialogMessage="@string/enum_suffix_summary"
        android:dialogTitle="@string/enum_suffix"
        android:key="enum_suffix"
        android:summary="@string/enum_suffix_summary"
        android:title="@string/enum_suffix" />
    <EditTextPreference
        android:defaultValue=""
        android:dialogMessage="@string/nbr_prefix_summary"
        android:dialogTitle="@string/nbr_prefix"
        android:key="nbr_prefix"
        android:summary="@string/nbr_prefix_summary"
        android:title="@string/nbr_prefix" />
    <EditTextPreference
        android:defaultValue="sip"
        android:dialogMessage="@string/services_to_match_summary"
        android:dialogTitle="@string/services_to_match"
        android:key="services_to_match"
        android:summary="@string/services_to_match_summary"
        android:title="@string/services_to_match" />

</PreferenceScreen>